feat: Rename app to DiffPulse and integrate AI review
This commit rebrands the application from "Text Diff Editor" to "DiffPulse" to better reflect its purpose. It also introduces integration with Google's Generative AI (Gemini) to provide an automated AI-powered review of the text.

Key changes include:
- Updating `package.json`, `index.html`, and `metadata.json` with the new application name.
- Adding the `@google/genai` dependency.
- Introducing a `GEMINI_REVIEW_PROMPT` constant for AI review instructions.
- Initializing state variables for AI review functionality in `App.tsx`.
- Refactoring the `Header` component to remove old functionality and prepare for new features.
- Updating `EditorPane` to include necessary Lexical imports and potential future integrations.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Novel Diff Editor</title>
+    <title>DiffPulse</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/diff@5.2.0/dist/diff.min.js"></script>
     <script>
@@ -37,7 +37,8 @@
     "lexical": "https://esm.sh/lexical@0.16.1",
     "lexical/": "https://esm.sh/lexical@0.16.1/",
     "@lexical/react": "https://esm.sh/@lexical/react@0.16.1",
-    "@lexical/react/": "https://esm.sh/@lexical/react@0.16.1/"
+    "@lexical/react/": "https://esm.sh/@lexical/react@0.16.1/",
+    "@google/genai": "https://esm.sh/@google/genai"
   }
 }
 </script>
