--- a/index.html
+++ b/index.html
@@ -28,6 +28,139 @@
     </script>
     <link rel="preconnect" href="https://rsms.me/">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <style>
+      .book-loader-container {
+        text-align: center;
+      }
+
+      .book-loader-text {
+        color: #FFFFFF;
+        text-align: center;
+        font-family: sans-serif;
+        text-transform: uppercase;
+        font-size: 20px;
+        position: relative;
+        margin-top: 1.5rem; /* 24px */
+        margin-bottom: 1rem; /* 16px */
+      }
+
+      .book-loader-text:after {
+        position: absolute;
+        content: "";
+        -webkit-animation: Dots 2s cubic-bezier(0, .39, 1, .68) infinite;
+        animation: Dots 2s cubic-bezier(0, .39, 1, .68) infinite;
+      }
+
+      .loader.book {
+        margin: 0 auto;
+        border: 4px solid #FFFFFF;
+        width: 60px;
+        height: 45px;
+        position: relative;
+        perspective: 150px;
+      }
+
+      .book .page {
+        display: block;
+        width: 30px;
+        height: 45px;
+        border: 4px solid #FFFFFF;
+        border-left: 1px solid #4338CA; /* brand-primary-hover */
+        margin: 0;
+        position: absolute;
+        right: -4px;
+        top: -4px;
+        overflow: hidden;
+        background: #4338CA; /* brand-primary-hover */
+        transform-style: preserve-3d;
+        -webkit-transform-origin: left center;
+        transform-origin: left center;
+      }
+
+      .book .page:nth-child(1) {
+        -webkit-animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.6s infinite;
+        animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.6s infinite;
+      }
+
+      .book .page:nth-child(2) {
+        -webkit-animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.45s infinite;
+        animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.45s infinite;
+      }
+
+      .book .page:nth-child(3) {
+        -webkit-animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.2s infinite;
+        animation: pageTurn 1.2s cubic-bezier(0, .39, 1, .68) 1.2s infinite;
+      }
+
+      /* Page turn */
+      @-webkit-keyframes pageTurn {
+        0% {
+          -webkit-transform: rotateY( 0deg);
+          transform: rotateY( 0deg);
+        }
+        20% {
+          background: #3730A3; /* A darker shade of primary */
+        }
+        40% {
+          background: #4F46E5; /* brand-primary */
+          -webkit-transform: rotateY( -180deg);
+          transform: rotateY( -180deg);
+        }
+        100% {
+          background: #4F46E5; /* brand-primary */
+          -webkit-transform: rotateY( -180deg);
+          transform: rotateY( -180deg);
+        }
+      }
+
+      @keyframes pageTurn {
+        0% {
+          transform: rotateY( 0deg);
+        }
+        20% {
+          background: #3730A3; /* A darker shade of primary */
+        }
+        40% {
+          background: #4F46E5; /* brand-primary */
+          transform: rotateY( -180deg);
+        }
+        100% {
+          background: #4F46E5; /* brand-primary */
+          transform: rotateY( -180deg);
+        }
+      }
+
+      /* Dots */
+      @-webkit-keyframes Dots {
+        0% {
+          content: "";
+        }
+        33% {
+          content: ".";
+        }
+        66% {
+          content: "..";
+        }
+        100% {
+          content: "...";
+        }
+      }
+
+      @keyframes Dots {
+        0% {
+          content: "";
+        }
+        33% {
+          content: ".";
+        }
+        66% {
+          content: "..";
+        }
+        100% {
+          content: "...";
+        }
+      }
+    </style>
   <script type="importmap">
 {
   "imports": {
